# CppLogicMake

./: .gitignore  .gitmodules  CMakeLists.txt  CppLogicMake-hardening-plan.md  Post.md  README.md  Readme.md  install.ps1  logimake.ps1
docs/: semantic-surface.md
examples/: cppkai.lm  hello_world.lm  kai_workspace.pl  submodule_example.lm
examples/fib/: fib.lm  fib.py  fib.rs
examples/fib/cpp17/: main.cpp
examples/fib/cpp23/: main.cpp
examples/kai_workspace/CppKaiCore/include/: kai_core.h
examples/kai_workspace/CppKaiCore/src/: core.cpp  registry.cpp
examples/kai_workspace/node/: main.cpp
prolog/: targets.pl
scripts/: build.ps1  generate.ps1  run.ps1  test.ps1  tests.ps1  verify.ps1
src/: cmake_emitter.cpp  cmake_emitter.hpp  git_integration.cpp  git_integration.hpp  main.cpp  prolog_engine.cpp  prolog_engine.hpp  resolver.cpp  resolver.hpp
tests/: CMakeLists.txt  fib_end_to_end.ps1  test_emitter.cpp  test_resolver.cpp  test_threading.cpp
